k8s/svc-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  type: ClusterIP
  selector:
    app: 
  ports:
    - protocol: TCP
      port: 
      targetPort:
